# webgpu-template

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  LICENSE.txt  README.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build.yml
example/compute/: CMakeLists.txt  main.cpp
example/render/: CMakeLists.txt  main.cpp
lib/imgui/: CMakeLists.txt
lib/miniaudio/: CMakeLists.txt
lib/webgpu/: CMakeLists.txt
src/: AudioDevice.cpp  CMakeLists.txt  Window.cpp  compute.cpp  main.cpp
src/tobi/: AudioDevice.cpp  AudioDevice.hpp  GPU.cpp  GPU.hpp  Window.cpp  Window.hpp
